--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bincode = "1.3.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_bytes = "0.11.15"
+fs4 = "0.8.4"
+tempfile = "3.12.0"
